--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
         <link rel="stylesheet" href="./assets/css/style.css" />
     </head>
     <body>
-        <h1>hello</h1>
 
+
+        <div>
+            <ul>
+                <li>item1</li>
+            </ul>
+        </div>
     </body>
 </html>
